[project]
name = "canvaz"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "box>=0.1.5",
 "pytest>=8.4.1",
 "python-box>=7.3.2",
 "toml>=0.10.2",
]

[tool.setuptools.package-data]
canvaz = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
