[project]
name = "canvaz"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "pytest>=8.4.1", "python-box>=7.3.2", "toml>=0.10.2",]

[tool.setuptools.package-data]
canvaz = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
